2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/10_PlsClassextends.deca
// Description:
//    Programme plusieurs clases qui extendent each other
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 15/01/2024
class A {
    protected int x;
    int getX()
    {
        return x;
    }
}

class B extends A{
    void setX()
    {
       this.x = x;
    }
}

class C extends B{

}

class D extends C{
    
}